<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_drink_image"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/name"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/type_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/type"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/desc"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/abv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/abv"
        android:inputType="number"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/add_drink"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:text="@string/cancel"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
