<resources>
    <string name="app_name">Project-2</string>
    <string name="action_settings">Settings</string>
    <string name="my_drinks">MY DRINKS</string>
    <string name="create">Create New Drinks</string>
    <string name="explore">EXPLORE</string>
    <string name="beer">Beers</string>
    <string name="wines">Wines</string>
    <string name="mixed_drinks">Mixed Drinks</string>
    <string name="Search_Hint">Search For A Drink</string>
    <string name="search_title">Search</string>
    <string name="name">Drink Name</string>
    <string name="type">Alcohol Type</string>
    <string name="desc">Description</string>
    <string name="abv">ABV</string>
    <string name="add_drink">Add Drink</string>
    <string name="cancel">cancel</string>
    <string name="search_results">Search Results</string>
    <string name="name_placer">Name :</string>
    <string name="abv_placer">ABV% :</string>
    <string name="description_placer">Description :</string>
    <string name="Drink">Drink :</string>
    <string name="API">API</string>


</resources>
