<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main_Menus.ExploreSelection"
    android:background="@drawable/explore_image">

   <Button
       android:layout_marginLeft="260dp"
       android:layout_marginTop="20dp"
       android:id="@+id/menu_button"
       android:text="Categories"
       android:textSize="15sp"
       android:textStyle="bold"
       android:textColor="#ffffff"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF73602A"/>

   <ListView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/list_view"
       android:textSize="14dp"
       android:divider="@android:color/transparent"
       android:dividerHeight="55sp"/>


</RelativeLayout>
