...
    android:background="@drawable/explore_image">


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/beerBtn"
        android:layout_alignBottom="@+id/BeerView"
        android:layout_toStartOf="@+id/BeerView"
        android:background="@mipmap/ic_beer"/>

    <TextView
        android:layout_width="wrap_content"
...
